# PaperFlow

./: README.md  pyproject.toml
backend/: main.py  pyproject.toml  settings.py
backend/biz/: research_field.py
backend/common/dto/: auth.py  research_field.py  user.py
backend/common/enums/: error_code.py
backend/common/exception/: __init__.py  auth.py  server.py
backend/common/util/: casdoor.py  middleware.py
backend/common/utils/: middleware.py
backend/dal/: database.py  init_db.py
backend/dal/dao/: research_field.py
backend/dal/po/: research_field.py
backend/dal/scripts/: init_db.py  init_research_fields.py
backend/web/controller/: auth.py  research_field.py  user.py
backend/web/handler/: __init__.py  auth.py
backend/web/vo/: result.py
frontend/: package-lock.json  package.json
